[tool.poetry]
name = "pytorch-lightning-masterclass"
version = "0.1.0"
description = "Learning pytorch lightning"
authors = ["Anshul Kanakia <anshul.p.kanakia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
transformers = "^4.19.4"
torch = "^1.11.0"
torchvision = "^0.12.0"
pytorch-lightning = "^1.6.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
